--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,133 @@
+html {
+  font-family: sans-serif;
+}
+
+.bg-blue {
+  background-color: rgb(2, 130, 249);
+}
+
+.bg-white {
+  background-color: white;
+}
+
+.bg-black {
+  background-color: black;
+  color: white;
+}
+
+.container {
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+header .bg-blue {
+  height: 2vh;
+}
+header .bg-blue .container span {
+  color: white;
+  font-size: 0.7rem;
+}
+header .header {
+  height: 7rem;
+  padding-top: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .header img {
+  height: 5rem;
+}
+header .header nav {
+  height: 100%;
+}
+header .header nav ul {
+  display: flex;
+  justify-content: end;
+  height: 100%;
+}
+header .header nav ul li {
+  list-style-type: none;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 600;
+  height: 100%;
+  padding: 0 0.5rem;
+  display: flex;
+  align-items: center;
+  border-bottom: 5px solid transparent;
+}
+header .header nav ul li a {
+  text-decoration: none;
+  color: black;
+}
+header .header nav ul li.active, header .header nav ul li:active {
+  border-color: rgb(2, 130, 249);
+}
+header .header nav ul li.active a, header .header nav ul li:active a {
+  color: rgb(2, 130, 249);
+}
+
+main .content {
+  padding: 5rem 0;
+}
+main #jumbotron {
+  height: 40vh;
+  background-image: url("/images/jumbotron.jpg");
+  background-size: cover;
+}
+main .container {
+  position: relative;
+  padding: 3rem 0;
+}
+main .container .title {
+  font-size: 1.7rem;
+  text-transform: uppercase;
+  background-color: rgb(2, 130, 249);
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.7rem;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateY(-50%);
+}
+main .container .cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+main .container .cards .card {
+  width: calc(16.6666666667% - 1rem);
+  margin-right: 1rem;
+  margin-bottom: 3rem;
+}
+main .container .cards .card img {
+  width: 100%;
+  height: 12rem;
+  margin-bottom: 1rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0px 0px;
+     object-position: 0px 0px;
+}
+main .container .cards .card h3 {
+  font-weight: 200;
+}
+main .container .buttons {
+  display: flex;
+  justify-content: center;
+}
+main .container .buttons .btn {
+  background-color: rgb(2, 130, 249);
+  color: white;
+  border: none;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 0.5rem 3rem;
+}
+
 footer #footer-up {
   background-image: url("../images/footer-bg.jpg");
   background-size: cover;
