--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,167 @@
 @import './partials/variables';
+@import './partials/mixins';
 
+html {
+    font-family: sans-serif;
+}
+
+.bg-blue {
+    background-color: $dc-blue;
+}
+
+.bg-white {
+    background-color: white;
+}
+
+.bg-black {
+    background-color: black;
+    color: white;
+}
+
+.container {
+    @include container;
+}
+
+header {
+    .bg-blue {
+        height: 2vh;
+
+        .container {
+            span {
+                color: white;
+                font-size: .7rem;
+            }
+        }
+    }
+
+    .header {
+        height: 7rem;
+        padding-top: 0.5rem;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        img {
+            height: 5rem;
+        }
+
+        nav {
+            height: 100%;
+
+            ul {
+                display: flex;
+                justify-content: end;
+                height: 100%;
+
+                li {
+                    list-style-type: none;
+                    text-transform: uppercase;
+
+                    font-size: 0.8rem;
+                    font-weight: 600;
+
+                    height: 100%;
+                    padding: 0 0.5rem;
+                    display: flex;
+                    align-items: center;
+
+                    border-bottom: 5px solid transparent;
+
+                    a {
+                        text-decoration: none;
+                        color: black;
+                    }
+
+                    &.active,
+                    &:active {
+                        border-color: $dc-blue;
+
+                        a {
+                            color: $dc-blue;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+main {
+    .content {
+        padding: 5rem 0;
+    }
+
+    #jumbotron {
+        height: 40vh;
+
+        background-image: url('/images/jumbotron.jpg');
+        background-size: cover;
+    }
+
+    .container {
+        position: relative;
+        padding: 3rem 0;
+
+        .title {
+            font-size: 1.7rem;
+            text-transform: uppercase;
+            background-color: $dc-blue;
+            width: fit-content;
+            padding: 0.7rem;
+
+            position: absolute;
+            left: 0;
+            top: 0;
+
+            transform: translateY(-50%);
+        }
+
+        .cards {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            .card {
+
+            width: calc(100% / 6 - 1rem);
+            margin-right: 1rem;
+
+            margin-bottom: 3rem;
+
+                img {
+                    width: 100%;
+                    height: 12rem;
+                    margin-bottom: 1rem;
+                    object-fit: cover;
+                    object-position: 0px 0px;
+                }
+
+                h3 {
+                    font-weight: 200;
+                }
+            }
+        }
+
+        .buttons {
+            display: flex;
+            justify-content: center;
+
+            .btn {
+                background-color: $dc-blue;
+                color: white;
+
+                border: none;
+
+                text-transform: uppercase;
+                font-size: 1rem;
+                font-weight: bold;
+
+                padding: 0.5rem 3rem;
+            }
+        }
+    }
+}
 
 footer {
     #footer-up {
