--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,9 +15,19 @@ html {
   color: white;
 }
 
+.bg-gray {
+  background-color: hsl(0deg, 0%, 96%);
+}
+
 .container {
   max-width: 80%;
   margin: 0 auto;
+}
+
+.my-container {
+  width: 70%;
+  margin: 0 auto;
+  padding: 3rem 0;
 }
 
 header .bg-blue {
@@ -26,6 +36,7 @@ header .bg-blue {
 header .bg-blue .container span {
   color: white;
   font-size: 0.7rem;
+  font-weight: bold;
 }
 header .header {
   height: 7rem;
@@ -42,7 +53,7 @@ header .header nav {
 }
 header .header nav ul {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   height: 100%;
 }
 header .header nav ul li {
@@ -70,11 +81,6 @@ header .header nav ul li.active a, header .header nav ul li:active a {
 main .content {
   padding: 5rem 0;
 }
-main #jumbotron {
-  height: 40vh;
-  background-image: url("/images/jumbotron.jpg");
-  background-size: cover;
-}
 main .container {
   position: relative;
   padding: 3rem 0;
@@ -98,13 +104,17 @@ main .container .cards {
   justify-content: center;
 }
 main .container .cards .card {
+  text-decoration: none;
   width: calc(16.6666666667% - 1rem);
   margin-right: 1rem;
   margin-bottom: 3rem;
 }
+main .container .cards .card:hover h3 {
+  color: white;
+}
 main .container .cards .card img {
   width: 100%;
-  height: 12rem;
+  height: 15rem;
   margin-bottom: 1rem;
   -o-object-fit: cover;
      object-fit: cover;
@@ -113,6 +123,7 @@ main .container .cards .card img {
 }
 main .container .cards .card h3 {
   font-weight: 200;
+  font-size: 1.3rem;
 }
 main .container .buttons {
   display: flex;
@@ -150,6 +161,101 @@ main #main-menu ul li span {
   font-size: 0.9rem;
   font-weight: 600;
   text-transform: uppercase;
+}
+
+#jumbotron {
+  height: 60vh;
+  background-image: url("/images/jumbotron.jpg");
+  background-size: cover;
+}
+
+div#comic section#upper-comic {
+  width: 100%;
+  height: 10vh;
+  background-color: rgb(2, 130, 249);
+}
+div#comic section#upper-comic > .comic-prev {
+  position: absolute;
+  left: 15%;
+  transform: translateY(-75%);
+}
+div#comic section#upper-comic > .comic-prev .type, div#comic section#upper-comic > .comic-prev .gallery {
+  background-color: hsl(193deg, 100%, 43%);
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+  position: absolute;
+}
+div#comic section#upper-comic > .comic-prev .type {
+  top: 0;
+  left: 0;
+  padding: 2px 5px;
+}
+div#comic section#upper-comic > .comic-prev .gallery {
+  bottom: 0;
+  width: 100%;
+}
+div#comic section#infobox h1 {
+  color: hsl(200deg, 100%, 20%);
+  font-weight: bold;
+}
+div#comic section#infobox .shop-info {
+  background-color: hsl(122deg, 42%, 53%);
+  color: hsla(122deg, 70%, 75%, 0.945);
+  font-weight: bold;
+  height: 5vh;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid gray;
+  margin-bottom: 1rem;
+}
+div#comic section#infobox .shop-info .price-tag {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.8rem 1rem;
+}
+div#comic section#infobox .shop-info .price-tag .price span {
+  color: white;
+}
+div#comic section#infobox .shop-info .check {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  border-left: 1px solid gray;
+  padding: 0.2rem 0.5rem;
+  color: white;
+}
+div#comic section#infobox .adv {
+  text-align: right;
+}
+div#comic section#infobox .description {
+  color: rgb(146, 145, 145);
+}
+
+section.artist-spec h3 {
+  color: hsl(200deg, 100%, 20%);
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+section.artist-spec .spec-section {
+  border-bottom: 1px solid rgba(184, 183, 183, 0.562);
+  border-top: 1px solid rgba(184, 183, 183, 0.562);
+  padding: 0.2rem 0;
+}
+section.artist-spec .spec-section .title {
+  color: hsl(200deg, 100%, 20%);
+  font-weight: bold;
+}
+section.artist-spec .spec-section .artist, section.artist-spec .spec-section .writer {
+  color: hsl(193deg, 100%, 43%);
+}
+section.artist-spec .spec-section .info {
+  color: rgb(141, 140, 140);
+}
+section.artist-spec .spec-section .info.price {
+  text-transform: uppercase;
+  color: hsl(193deg, 100%, 43%);
 }
 
 footer #footer-up {
