--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,8 +18,18 @@ html {
     color: white;
 }
 
+.bg-gray {
+    background-color: hsl(0, 0%, 96%);
+}
+
 .container {
     @include container;
+}
+
+.my-container {
+    width: 70%;
+    margin: 0 auto;
+    padding: 3rem 0;
 }
 
 header {
@@ -30,6 +40,7 @@ header {
             span {
                 color: white;
                 font-size: .7rem;
+                font-weight: bold;
             }
         }
     }
@@ -51,7 +62,7 @@ header {
 
             ul {
                 display: flex;
-                justify-content: end;
+                justify-content: flex-end;
                 height: 100%;
 
                 li {
@@ -92,13 +103,6 @@ main {
         padding: 5rem 0;
     }
 
-    #jumbotron {
-        height: 40vh;
-
-        background-image: url('/images/jumbotron.jpg');
-        background-size: cover;
-    }
-
     .container {
         position: relative;
         padding: 3rem 0;
@@ -124,14 +128,22 @@ main {
 
             .card {
 
-            width: calc(100% / 6 - 1rem);
-            margin-right: 1rem;
+                text-decoration: none;
 
-            margin-bottom: 3rem;
+                width: calc(100% / 6 - 1rem);
+                margin-right: 1rem;
+
+                margin-bottom: 3rem;
+
+                &:hover {
+                   h3 {
+                       color: white;
+                   }
+                }
 
                 img {
                     width: 100%;
-                    height: 12rem;
+                    height: 15rem;
                     margin-bottom: 1rem;
                     object-fit: cover;
                     object-position: 0px 0px;
@@ -139,6 +151,7 @@ main {
 
                 h3 {
                     font-weight: 200;
+                    font-size: 1.3rem;
                 }
             }
         }
@@ -189,6 +202,129 @@ main {
                     text-transform: uppercase;
                 }
             }
+        }
+    }
+}
+
+#jumbotron {
+    height: 60vh;
+
+    background-image: url('/images/jumbotron.jpg');
+    background-size: cover;
+}
+
+div#comic {
+    section#upper-comic {
+        width: 100%;
+        height: 10vh;
+        background-color: $dc-blue;
+
+        &>.comic-prev {
+            position: absolute;
+            left: 15%;
+            transform: translateY(-75%);
+
+            .type, .gallery {
+                background-color: $light-blue;
+                color: white;
+                text-transform: uppercase;
+                text-align: center;
+
+                position: absolute;
+            }
+
+            .type {
+                top: 0;
+                left: 0;
+                padding: 2px 5px;
+            }
+
+            .gallery {
+                bottom: 0;
+                width: 100%;
+            }
+        }
+    }
+
+    section#infobox {
+        h1 {
+            color: hsl(200, 100%, 20%);
+            font-weight: bold;
+        }
+
+        .shop-info {
+            background-color: hsl(122, 42%, 53%);
+            color: hsla(122, 70%, 75%, 0.945);
+            font-weight: bold;
+
+            height: 5vh;
+
+            display: flex;
+            align-items: center;
+
+            border-bottom: 1px solid gray;
+
+            margin-bottom: 1rem;
+
+            .price-tag {
+                flex-grow: 1;
+                display: flex;
+                justify-content: space-between;
+
+                padding: .8rem 1rem;
+
+                .price span {
+                    color: white;
+                }
+            }
+
+            .check {
+                display: flex;
+                align-items: center;
+                height: 100%;
+                border-left: 1px solid gray;
+                padding: .2rem .5rem;
+                color: white;
+            }
+        }
+
+        .adv {
+            text-align: right;
+        }
+
+        .description {
+            color: rgb(146, 145, 145);
+        }
+    }
+}
+
+section.artist-spec {
+    h3 {
+        color: hsl(200, 100%, 20%);
+        font-weight: bold;
+        margin-bottom: 2rem;
+    }
+
+    .spec-section {
+        border-bottom: 1px solid rgba(184, 183, 183, 0.562);
+        border-top: 1px solid rgba(184, 183, 183, 0.562);
+        padding: .2rem 0;
+
+        .title {
+            color: hsl(200, 100%, 20%);
+            font-weight: bold;
+        }
+
+        .artist, .writer {
+            color: $light-blue;
+        }
+
+        .info {
+            &.price {
+                text-transform: uppercase;
+                color: $light-blue;
+            }
+            color: rgb(141, 140, 140);
         }
     }
 }
